@@ -244,6 +244,13 @@ void RobHousePage::actionPerformed( GUIComponent *inTarget ) {
             ! mSuicideConfirmCheckbox.getToggled() ) {
             return;
             }
+        if( mSuicideConfirmCheckbox.isVisible() ) {
+            // commited suicide to end robbery
+            // in that case, mGridDisplay does not detect the suicide
+            // must force family end process
+            mGridDisplay.processFamilyAtEnd();
+            }
+
         mDone = true;
         clearNotes();
         }
